--- a/config/west.yml
+++ b/config/west.yml
@@ -3,7 +3,7 @@ manifest:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
     - name: zmk_locales
-      url-base: https://github.com/joelspadin/zmk-locales
+      url-base: https://github.com/joelspadin
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
   projects:
@@ -11,7 +11,7 @@ manifest:
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: locales
+    - name: zmk-locales
       remote: zmk_locales
       revision: main
   self:
