Rename adelholtz_pru behavior to apr

--- a/dts/bindings/behaviors/zmk,behavior-adelholtz-process-record-user.yaml
+++ b/dts/bindings/behaviors/zmk,behavior-adelholtz-process-record-user.yaml
@@ -1,6 +1,6 @@
 description: Adelholtz custom behavior for process_record_user
 
-compatible: "zmk,behavior-adelholtz-pru"
+compatible: "zmk,apr"
 
 include: [behavior.yaml]
 
