Fix include path in zmk,apr.yaml binding

--- a/dts/bindings/behaviors/zmk,apr.yaml
+++ b/dts/bindings/behaviors/zmk,apr.yaml
@@ -2,7 +2,7 @@ description: Adelholtz custom behavior for process_record_user
 
 compatible: "zmk,apr"
 
-include: [behavior.yaml]
+include: [behaviors/behavior.yaml]
 
 properties:
   "#binding-cells":
