Update APR behavior to include one_param.yaml

--- a/dts/bindings/behaviors/zmk,apr.yaml
+++ b/dts/bindings/behaviors/zmk,apr.yaml
@@ -2,7 +2,7 @@ description: Adelholtz custom behavior for process_record_user
 
 compatible: "zmk,apr"
 
-include: [behaviors/behavior.yaml]
+include: [one_param.yaml]
 
 properties:
   "#binding-cells":
