--- a/build.yaml
+++ b/build.yaml
@@ -19,10 +19,10 @@
 #
 ---
 include:
-  - board: nice_nano@2.0.0
+  - board: nice_nano//zmk@2.0.0
     shield: corne_left nice_view_adapter nice_view
     snippet: studio-rpc-usb-uart
-  - board: nice_nano@2.0.0
+  - board: nice_nano//zmk@2.0.0
     shield: corne_right nice_view_adapter nice_view
-  - board: nice_nano@2.0.0
+  - board: nice_nano//zmk@2.0.0
     shield: settings_reset
