--- a/build.yaml
+++ b/build.yaml
@@ -22,7 +22,10 @@ include:
   - board: nice_nano@2.0.0//zmk
     shield: corne_left nice_view_adapter nice_view
     snippet: studio-rpc-usb-uart
+    artifact-name: corne_left-nice_nano_zmk
   - board: nice_nano@2.0.0//zmk
     shield: corne_right nice_view_adapter nice_view
+    artifact-name: corne_right-nice_nano_zmk
   - board: nice_nano@2.0.0//zmk
     shield: settings_reset
+    artifact-name: settings_reset-nice_nano_zmk
